--- a/Web Front End Estática/Aula 9 -  datalist, modal, flexbox, nth-child(n), gradiente com z-index/bitly/styles.scss
+++ b/Web Front End Estática/Aula 9 -  datalist, modal, flexbox, nth-child(n), gradiente com z-index/bitly/styles.scss
@@ -83,9 +83,11 @@ header > .content {
         left: 0;
         top: 0;
         width: 100%;
-        padding-bottom: 3.8rem;
+        padding-bottom:2 3.8rem;
         border-bottom: 2px solid var(--accent-color);
         transform: scaleX(0);
+        transition: 0.2s ease-in-out;
+        transform-origin: center;
         transition: 0.2s ease-in-out;
         transform-origin: center;
       }
